--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,13 @@ authors = ["konhi <hello.konhi@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+pandas = "^1.3.4"
+openpyxl = "^3.0.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+wemake-python-styleguide = "^0.15.3"
+mypy = "^0.910"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
