--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["konhi <hello.konhi@gmail.com>"]
 python = "^3.8"
 pandas = "^1.3.4"
 openpyxl = "^3.0.9"
+deep-translator = "^1.5.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
