--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.8"
 pandas = "^1.3.4"
 openpyxl = "^3.0.9"
 deep-translator = "^1.5.5"
+genanki = "^0.12.0"
+requests = "^2.26.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
